[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Logo/Logo.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://SoundEffects/Menu/Accept.wav" type="AudioStream" id=3]
[ext_resource path="res://SoundEffects/Menu/Select.wav" type="AudioStream" id=4]

[node name="MainMenu" type="Node2D"]

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
focus_mode = 2
script = ExtResource( 2 )

[node name="AudioStreamPlayerAccept" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource( 3 )

[node name="AudioStreamPlayerSelect" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_left = 437.0
margin_top = 289.0
margin_right = 576.0
margin_bottom = 405.0
focus_mode = 2
custom_constants/separation = 20

[node name="ButtonLonguinho" type="Button" parent="Control/VBoxContainer"]
margin_right = 139.0
margin_bottom = 20.0
text = "Play with Longuinho"

[node name="ButtonVigou" type="Button" parent="Control/VBoxContainer"]
margin_top = 40.0
margin_right = 139.0
margin_bottom = 60.0
text = "Play with Vigou"

[node name="ButtonFling" type="Button" parent="Control/VBoxContainer"]
margin_top = 80.0
margin_right = 139.0
margin_bottom = 100.0
text = "Play with Fling"

[node name="ButtonNina" type="Button" parent="Control/VBoxContainer"]
margin_top = 120.0
margin_right = 139.0
margin_bottom = 140.0
toggle_mode = true
text = "Play with Nina"

[node name="ButtonExit" type="Button" parent="Control/VBoxContainer"]
margin_top = 160.0
margin_right = 139.0
margin_bottom = 180.0
text = "Exit"

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 512, 110 )
texture = ExtResource( 1 )

[node name="Version" type="Label" parent="."]
margin_left = 15.0
margin_top = 561.0
margin_right = 99.0
margin_bottom = 575.0
rect_scale = Vector2( 2, 2 )
text = "Public Beta Test 2"
